Some animation added

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
           <div class="container">
             <div class="col-lg-6">
               <div class="bannerTexts">
-                <div class="bannerHeading">
+                <div class="bannerHeading ">
                   <img src="images/Path 2486.png" alt="Path 2486.png" />
                   <h3>Real Estate Agency</h3>
                 </div>
-                <h1>Search and Find <span>Luxury </span>House</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                <div class="btnIcon">
+                <h1 class="">Search and Find <span>Luxury </span>House</h1>
+                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> Make An Enquiry </a>
                   <a
                     class="my-video-links"
@@ -116,9 +116,9 @@
             </div> -->
           </div>
           <div class="realEstate">
-            <h3>Real Estate</h3>
+            <h3 class="real">Real Estate</h3>
           </div>
-          <div class="socialMediaIcons">
+          <div class="socialMediaIcons ">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter twitter"></i>
             <i class="fa-brands fa-vimeo-v"></i>
@@ -128,28 +128,23 @@
           <div class="container">
             <div class="col-lg-6">
               <div class="bannerTexts">
-                <div class="bannerHeading">
+                <div class="bannerHeading ">
                   <img src="images/Path 2486.png" alt="Path 2486.png" />
                   <h3>Real Estate Agency</h3>
                 </div>
-                <h1>Find Your Dream  House By Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                <div class="btnIcon">
+                <h1 class="">Find Your Dream  House By Us</h1>
+                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> OUR SERVICES </a>
                   <a href="#" class="navBtn learnMore"> LEARN MORE </a>
                 </div>
               </div>
             </div>
-            <!-- <div class="slides">
-              <picture><img src="images/62.jpg" alt="62.jpg" /></picture>
-              <picture><img src="images/63.jpg" alt="63.jpg" /></picture>
-              <picture><img src="images/64.jpg" alt="64.jpg" /></picture>
-            </div> -->
           </div>
           <div class="realEstate">
-            <h3>Real Estate</h3>
+            <h3 class="real">Real Estate</h3>
           </div>
-          <div class="socialMediaIcons">
+          <div class="socialMediaIcons ">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter twitter"></i>
             <i class="fa-brands fa-vimeo-v"></i>
@@ -159,28 +154,23 @@
           <div class="container">
             <div class="col-lg-6">
               <div class="bannerTexts">
-                <div class="bannerHeading">
+                <div class="bannerHeading ">
                   <img src="images/Path 2486.png" alt="Path 2486.png" />
                   <h3>Real Estate Agency</h3>
                 </div>
-                <h1>Find Your Dream  House By Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                <div class="btnIcon">
+                <h1 class="">Find Your Dream  House By Us</h1>
+                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> OUR SERVICES </a>
                   <a href="#" class="navBtn learnMore"> LEARN MORE </a>
                 </div>
               </div>
             </div>
-            <!-- <div class="slides">
-              <picture><img src="images/62.jpg" alt="62.jpg" /></picture>
-              <picture><img src="images/63.jpg" alt="63.jpg" /></picture>
-              <picture><img src="images/64.jpg" alt="64.jpg" /></picture>
-            </div> -->
           </div>
           <div class="realEstate">
-            <h3>Real Estate</h3>
+            <h3 class="real">Real Estate</h3>
           </div>
-          <div class="socialMediaIcons">
+          <div class="socialMediaIcons ">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter twitter"></i>
             <i class="fa-brands fa-vimeo-v"></i>
@@ -190,13 +180,13 @@
           <div class="container">
             <div class="col-lg-6">
               <div class="bannerTexts">
-                <div class="bannerHeading">
+                <div class="bannerHeading ">
                   <img src="images/Path 2486.png" alt="Path 2486.png" />
                   <h3>Real Estate Agency</h3>
                 </div>
-                <h1>Find Your Dream  House By Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                <div class="btnIcon">
+                <h1 class="">Find Your Dream  House By Us</h1>
+                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> OUR SERVICES </a>
                   <a href="#" class="navBtn learnMore"> LEARN MORE </a>
                 </div>
@@ -204,9 +194,9 @@
             </div>
           </div>
           <div class="realEstate">
-            <h3>Real Estate</h3>
+            <h3 class="real">Real Estate</h3>
           </div>
-          <div class="socialMediaIcons">
+          <div class="socialMediaIcons ">
             <i class="fa-brands fa-facebook-f"></i>
             <i class="fa-brands fa-twitter twitter"></i>
             <i class="fa-brands fa-vimeo-v"></i>
