--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <h3>Real Estate Agency</h3>
                 </div>
                 <h1 class="">Search and Find <span>Luxury </span>House</h1>
-                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p class="bannerParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
                 <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> Make An Enquiry </a>
                   <a
@@ -133,7 +133,7 @@
                   <h3>Real Estate Agency</h3>
                 </div>
                 <h1 class="">Find Your Dream  House By Us</h1>
-                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p class="bannerParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
                 <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> OUR SERVICES </a>
                   <a href="#" class="navBtn learnMore"> LEARN MORE </a>
@@ -159,7 +159,7 @@
                   <h3>Real Estate Agency</h3>
                 </div>
                 <h1 class="">Find Your Dream  House By Us</h1>
-                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p class="bannerParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
                 <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> OUR SERVICES </a>
                   <a href="#" class="navBtn learnMore"> LEARN MORE </a>
@@ -185,7 +185,7 @@
                   <h3>Real Estate Agency</h3>
                 </div>
                 <h1 class="">Find Your Dream  House By Us</h1>
-                <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <p class="bannerParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
                 <div class="btnIcon ">
                   <a href="#" class="navBtn bannerBtn"> OUR SERVICES </a>
                   <a href="#" class="navBtn learnMore"> LEARN MORE </a>
@@ -472,7 +472,7 @@
               <h2>Dream Living Space Setting New Standards</h2>
             </div>
           </div>
-          <div class="offset-lg-3 col-lg-2">
+          <!-- <div class="offset-lg-3 col-lg-2">
             <div class="row gollaSpace">
               <div class="offset-lg-2 col-lg-4 golla">
                 <i class="fa-solid fa-arrow-left-long"></i>
@@ -481,68 +481,200 @@
                 <i class="fa-solid fa-arrow-right-long"></i>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
-        <div class="projectService">
-          <div class="row">
-            <div class="col-lg-7">
-              <picture>
-                <img src="images/3.jpg" alt="3.jpg" class="img-fluid w-100" />
-              </picture>
-              <div class="slides slidesTwo">
-                <picture><img src="images/62.jpg" alt="62.jpg" /></picture>
-                <picture><img src="images/63.jpg" alt="63.jpg" /></picture>
-                <picture><img src="images/64.jpg" alt="64.jpg" /></picture>
+        <div class="productServiceSlider">
+          <div class="projectService">
+            <div class="row">
+              <div class="col-lg-7 ">
+                <picture>
+                  <img src="images/3.jpg" alt="3.jpg" class="img-fluid w-100 projectSlideImg" />
+                </picture>
+                <!-- <div class="slides slidesTwo">
+                  <picture><img src="images/3.jpg" alt="3.jpg" /></picture>
+                  <picture><img src="images/62.jpg" alt="62.jpg" /></picture>
+                  <picture><img src="images/7.jpg" alt="7.jpg" /></picture>
+                </div> -->
+              </div>
+              <div class="col-lg-5">
+                <div class="ourServices">
+                  <h6>Our Services</h6>
+                  <h3>Upcoming Projects</h3>
+                  <div class="row projectInfo">
+                    <div class="col-lg-5">
+                      <h4>1. Project Name:</h4>
+                    </div>
+                    <div class="offset-lg-4 col-lg-2">
+                      <p>Curesity</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-5">
+                      <h4>2. Project Type:</h4>
+                    </div>
+                    <div class="col-lg-7">
+                      <p>Super Apartment / Home</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-6">
+                      <h4>3. Building Location:</h4>
+                    </div>
+                    <div class="offset-lg-1 col-lg-5">
+                      <p>Newyork, USA</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-7">
+                      <h4>4. No. Of Apartments:</h4>
+                    </div>
+                    <div class="offset-lg-3 col-lg-2">
+                      <p>568</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-6">
+                      <h4>5. Total Investment:</h4>
+                    </div>
+                    <div class="offset-lg-2 col-lg-4">
+                      <p>$14,500,00</p>
+                    </div>
+                  </div>
+                  <a href="#" class="downloadBrochure">
+                    Download Brochure
+                    <img src="images/Group 7543.png" alt="Group 7543.png" class="brochureImg"
+                  /></a>
+                </div>
               </div>
             </div>
-            <div class="col-lg-5">
-              <div class="ourServices">
-                <h6>Our Services</h6>
-                <h3>Upcoming Projects</h3>
-                <div class="row projectInfo">
-                  <div class="col-lg-5">
-                    <h4>1. Project Name:</h4>
+          </div>
+
+          <div class="projectService">
+            <div class="row">
+              <div class="col-lg-7">
+                <picture>
+                  <img src="images/62.jpg" alt="62.jpg" class="img-fluid w-100 projectSlideImg" />
+                </picture>
+                <!-- <div class="slides slidesTwo">
+                  <picture><img src="images/62.jpg" alt="62.jpg" /></picture>
+                  <picture><img src="images/63.jpg" alt="63.jpg" /></picture>
+                  <picture><img src="images/64.jpg" alt="64.jpg" /></picture>
+                </div> -->
+              </div>
+              <div class="col-lg-5">
+                <div class="ourServices">
+                  <h6>Our Services</h6>
+                  <h3>Upcoming Projects</h3>
+                  <div class="row projectInfo">
+                    <div class="col-lg-5">
+                      <h4>1. Project Name:</h4>
+                    </div>
+                    <div class="offset-lg-4 col-lg-2">
+                      <p>Curesity</p>
+                    </div>
                   </div>
-                  <div class="offset-lg-4 col-lg-2">
-                    <p>Curesity</p>
+                  <div class="row projectInfo">
+                    <div class="col-lg-5">
+                      <h4>2. Project Type:</h4>
+                    </div>
+                    <div class="col-lg-7">
+                      <p>Super Apartment / Home</p>
+                    </div>
                   </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-6">
+                      <h4>3. Building Location:</h4>
+                    </div>
+                    <div class="offset-lg-1 col-lg-5">
+                      <p>Newyork, USA</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-7">
+                      <h4>4. No. Of Apartments:</h4>
+                    </div>
+                    <div class="offset-lg-3 col-lg-2">
+                      <p>568</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-6">
+                      <h4>5. Total Investment:</h4>
+                    </div>
+                    <div class="offset-lg-2 col-lg-4">
+                      <p>$14,500,00</p>
+                    </div>
+                  </div>
+                  <a href="#" class="downloadBrochure">
+                    Download Brochure
+                    <img src="images/Group 7543.png" alt="Group 7543.png"
+                  /></a>
                 </div>
-                <div class="row projectInfo">
-                  <div class="col-lg-5">
-                    <h4>2. Project Type:</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="projectService">
+            <div class="row">
+              <div class="col-lg-7">
+                <picture>
+                  <img src="images/7.jpg" alt="7.jpg" class="img-fluid w-100 projectSlideImg" />
+                </picture>
+                <!-- <div class="slides slidesTwo">
+                  <picture><img src="images/62.jpg" alt="62.jpg" /></picture>
+                  <picture><img src="images/63.jpg" alt="63.jpg" /></picture>
+                  <picture><img src="images/64.jpg" alt="64.jpg" /></picture>
+                </div> -->
+              </div>
+              <div class="col-lg-5">
+                <div class="ourServices">
+                  <h6>Our Services</h6>
+                  <h3>Upcoming Projects</h3>
+                  <div class="row projectInfo">
+                    <div class="col-lg-5">
+                      <h4>1. Project Name:</h4>
+                    </div>
+                    <div class="offset-lg-4 col-lg-2">
+                      <p>Curesity</p>
+                    </div>
                   </div>
-                  <div class="col-lg-7">
-                    <p>Super Apartment / Home</p>
+                  <div class="row projectInfo">
+                    <div class="col-lg-5">
+                      <h4>2. Project Type:</h4>
+                    </div>
+                    <div class="col-lg-7">
+                      <p>Super Apartment / Home</p>
+                    </div>
                   </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-6">
+                      <h4>3. Building Location:</h4>
+                    </div>
+                    <div class="offset-lg-1 col-lg-5">
+                      <p>Newyork, USA</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-7">
+                      <h4>4. No. Of Apartments:</h4>
+                    </div>
+                    <div class="offset-lg-3 col-lg-2">
+                      <p>568</p>
+                    </div>
+                  </div>
+                  <div class="row projectInfo">
+                    <div class="col-lg-6">
+                      <h4>5. Total Investment:</h4>
+                    </div>
+                    <div class="offset-lg-2 col-lg-4">
+                      <p>$14,500,00</p>
+                    </div>
+                  </div>
+                  <a href="#" class="downloadBrochure">
+                    Download Brochure
+                    <img src="images/Group 7543.png" alt="Group 7543.png"
+                  /></a>
                 </div>
-                <div class="row projectInfo">
-                  <div class="col-lg-6">
-                    <h4>3. Building Location:</h4>
-                  </div>
-                  <div class="offset-lg-1 col-lg-5">
-                    <p>Newyork, USA</p>
-                  </div>
-                </div>
-                <div class="row projectInfo">
-                  <div class="col-lg-7">
-                    <h4>4. No. Of Apartments:</h4>
-                  </div>
-                  <div class="offset-lg-3 col-lg-2">
-                    <p>568</p>
-                  </div>
-                </div>
-                <div class="row projectInfo">
-                  <div class="col-lg-6">
-                    <h4>5. Total Investment:</h4>
-                  </div>
-                  <div class="offset-lg-2 col-lg-4">
-                    <p>$14,500,00</p>
-                  </div>
-                </div>
-                <a href="#" class="downloadBrochure">
-                  Download Brochure
-                  <img src="images/Group 7543.png" alt="Group 7543.png"
-                /></a>
               </div>
             </div>
           </div>
