Full page complete

--- a/index.html
+++ b/index.html
@@ -1735,7 +1735,7 @@
                 </div>
               </div>
               <h3>10 Brilliant Ways To Decorate Your Home</h3>
-              <hr style="padding-bottom: 8px;"/>
+              <hr style="padding-bottom: 8px" />
               <div class="row">
                 <div class="col-lg-6">
                   <div class="row user">
@@ -1781,7 +1781,7 @@
                 </div>
               </div>
               <h3>The Most Inspiring Interior Design Of 2021</h3>
-              <hr style="padding-bottom: 8px;"/>
+              <hr style="padding-bottom: 8px" />
               <div class="row">
                 <div class="col-lg-6">
                   <div class="row user">
@@ -1801,7 +1801,11 @@
           </div>
           <div class="col-lg-4 blogItems">
             <picture>
-              <img src="images/3 (3).jpg" alt="3 (3).jpg" class="w-100 img-fluid" />
+              <img
+                src="images/3 (3).jpg"
+                alt="3 (3).jpg"
+                class="w-100 img-fluid"
+              />
             </picture>
             <div class="blogBox">
               <div class="row">
@@ -1827,7 +1831,7 @@
                 </div>
               </div>
               <h3>Recent Commercial Real Estate Transactions</h3>
-              <hr style="padding-bottom: 8px;"/>
+              <hr style="padding-bottom: 8px" />
               <div class="row">
                 <div class="col-lg-6">
                   <div class="row user">
@@ -1873,7 +1877,7 @@
                 </div>
               </div>
               <h3>Renovating a Living Room? Experts Share Their Secrets</h3>
-              <hr style="padding-bottom: 8px;"/>
+              <hr style="padding-bottom: 8px" />
               <div class="row">
                 <div class="col-lg-6">
                   <div class="row user">
@@ -1919,7 +1923,7 @@
                 </div>
               </div>
               <h3>7 home trends that will shape your house in 2021</h3>
-              <hr style="padding-bottom: 8px;"/>
+              <hr style="padding-bottom: 8px" />
               <div class="row">
                 <div class="col-lg-6">
                   <div class="row user">
@@ -1934,6 +1938,162 @@
                 <div class="col-lg-6 read_more">
                   <a href="#">Read More</a>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="dreamHome">
+      <div class="container">
+        <div class="exploreProperties">
+          <div class="row">
+            <div class="col-lg-7">
+              <h3>Looking for a dream home?</h3>
+              <h6>We help you make the dream of new house a reality</h6>
+            </div>
+            <div class="col-lg-5 propertiesExplore">
+              <a href="#"
+                >Explore Properties <i class="fa-solid fa-arrow-right-long"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="row">
+          <div class="col-lg-3 footerTexts">
+            <picture>
+              <img
+                src="images/logo-2.png"
+                alt="logo-2.png"
+                style="padding-bottom: 25px"
+              />
+            </picture>
+            <p>
+              Lorem Ipsum is simply dummy text of the and typesetting industry.
+              Lorem Ipsum is dummy text of the printing.
+            </p>
+            <div class="address row">
+              <div class="icon col-lg-1">
+                <i class="fa-solid fa-location-dot"></i>
+              </div>
+              <div class="col-lg-10">
+                <p>Brooklyn, New York, United States</p>
+              </div>
+            </div>
+            <div class="phone row">
+              <div class="icon col-lg-1">
+                <i class="fa-solid fa-phone-volume"></i>
+              </div>
+              <div class="col-lg-10">
+                <h6>+0123-456789</h6>
+              </div>
+            </div>
+            <div class="email row">
+              <div class="icon col-lg-1">
+                <i class="fa-regular fa-envelope"></i>
+              </div>
+              <div class="col-lg-10">
+                <h6>example@example.com</h6>
+              </div>
+            </div>
+            <div class="icons">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 footer_menu">
+            <h4>Company</h4>
+            <ul>
+              <li>
+                <a href="#"><span>//</span><h2>About</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Blog</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>All Products</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Locations Map</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>FAQ</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Contact us</h2></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-2 footer_menu">
+            <h4>Services</h4>
+            <ul>
+              <li>
+                <a href="#"><span>//</span><h2>Order tracking</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Wish List</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Login</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>My account</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Terms & Conditions</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Promotional Offers</h2></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-2 footer_menu">
+            <h4>Customer Care</h4>
+            <ul>
+              <li>
+                <a href="#"><span>//</span><h2>Login</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>My account</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Wish List</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Order tracking</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>FAQ</h2></a>
+              </li>
+              <li>
+                <a href="#"><span>//</span><h2>Contact us</h2></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 footer_menu">
+            <h4>Newsletter</h4>
+            <p>Subscribe to our weekly Newsletter and receive updates via email.</p>
+            <h4 style="padding-top: 30px; padding-bottom: 30px;">We Accept</h4>
+            <picture>
+              <img src="images/payment-4.png" alt="payment-4.png" class="w-100 img-fluid">
+            </picture>
+          </div>
+        </div>
+        <div class="copyright">
+          <div class="row copyrightAlign">
+            <div class="col-lg-3">
+              <h6>All Rights Reserved @ Company 2025</h6>
+            </div>
+            <div class="offset-lg-5 col-lg-4">
+              <div class="row">
+                <div class="col-lg-5"><p>Terms & Conditions</p></div>
+                <div class="col-lg-2"><p>Claim</p></div>
+                <div class="col-lg-5"><p>Privacy & Policy</p></div>
               </div>
             </div>
           </div>
